@@ -41,6 +41,7 @@ import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.gridsuite.modification.server.NetworkModificationException.Type.*;
 import static org.hamcrest.Matchers.containsString;
@@ -1900,8 +1901,8 @@ public class ModificationControllerTest {
             .isEqualTo(List.of());
     }
 
-    private List<UUID> createSomeSwitchModifications(UUID groupId, int number) {
-        List<String> openStates = Arrays.asList("true", "false");
+    private List<ModificationInfos> createSomeSwitchModifications(UUID groupId, int number) {
+        List<String> openStates = List.of("true", "false");
         for (int i = 0; i < number; i++) {
             webTestClient.put().uri("/v1/networks/{networkUuid}/switches/{switchId}?group=" + groupId + "&open=" + openStates.get(i % 2) + "&reportUuid=" + TEST_REPORT_ID, TEST_NETWORK_ID, "v1b1")
                     .exchange()
@@ -1910,7 +1911,7 @@ public class ModificationControllerTest {
                     .expectBodyList(EquipmentAttributeModificationInfos.class)
                     .returnResult().getResponseBody();
         }
-        var modificationList = networkModificationService.getModifications(groupId, true, true).map(ModificationInfos::getUuid).collectList().block();
+        var modificationList = modificationRepository.getModifications(groupId, true, true);
         assertEquals(number, modificationList.size());
         return modificationList;
     }
@@ -1918,12 +1919,13 @@ public class ModificationControllerTest {
     @Test
     public void testDuplicateModification() {
         // create 3 modifications
-        List<UUID> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 3);
+        List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 3);
+        List<UUID> modificationUuidList = modificationList.stream().map(ModificationInfos::getUuid).collect(Collectors.toList());
 
         // Duplicate [0] and [1], and append them at the end of the group modification list.
         // Also try to duplicate 2 un-existing modifications, that should be returned as errors.
-        List<UUID> duplicateModificationUuidList = new ArrayList<>(modificationList.subList(0, 2));
-        List<UUID> badModificationUuidList = Arrays.asList(UUID.randomUUID(), UUID.randomUUID());
+        List<UUID> duplicateModificationUuidList = new ArrayList<>(modificationUuidList.subList(0, 2));
+        List<UUID> badModificationUuidList = List.of(UUID.randomUUID(), UUID.randomUUID());
         duplicateModificationUuidList.addAll(badModificationUuidList);
         webTestClient.put().uri("/v1/groups/" + TEST_GROUP_ID
                         + "?action=DUPLICATE")
@@ -1933,19 +1935,20 @@ public class ModificationControllerTest {
                 .expectBodyList(UUID.class)
                 .isEqualTo(badModificationUuidList); // bad uuids are returned
 
-        var newModificationList = networkModificationService.getModifications(TEST_GROUP_ID, true, true).map(ModificationInfos::getUuid).collectList().block();
+        var newModificationList = modificationRepository.getModifications(TEST_GROUP_ID, true, true);
+        List<UUID> newModificationUuidList = newModificationList.stream().map(ModificationInfos::getUuid).collect(Collectors.toList());
         // now 5 modifications: first 0-1-2 are still the same, last 3-4 are new (duplicates of 0-1)
         assertEquals(5, newModificationList.size());
-        assertEquals(modificationList, newModificationList.subList(0, 3));
+        assertEquals(modificationUuidList, newModificationUuidList.subList(0, 3));
         // compare duplicates 0 and 3 (same data except uuid)
-        var modification0 = networkModificationService.getModification(modificationList.get(0)).blockFirst();
-        var newModification3 = networkModificationService.getModification(newModificationList.get(3)).blockFirst();
+        var modification0 = modificationList.get(0);
+        var newModification3 = newModificationList.get(3);
         modification0.setUuid(null);
         newModification3.setUuid(null);
         assertEquals(modification0.toString(), newModification3.toString());
         // compare duplicates 1 and 4 (same data except uuid)
-        var modification1 = networkModificationService.getModification(modificationList.get(1)).blockFirst();
-        var newModification4 = networkModificationService.getModification(newModificationList.get(4)).blockFirst();
+        var modification1 = modificationList.get(1);
+        var newModification4 = newModificationList.get(4);
         modification1.setUuid(null);
         newModification4.setUuid(null);
         assertEquals(modification1.toString(), newModification4.toString());
@@ -1959,10 +1962,11 @@ public class ModificationControllerTest {
 
         // create 1 modification in another group
         UUID otherGroupId = UUID.randomUUID();
-        List<UUID> modificationListOtherGroup = createSomeSwitchModifications(otherGroupId, 1);
+        List<ModificationInfos> modificationListOtherGroup = createSomeSwitchModifications(otherGroupId, 1);
+        List<UUID> modificationUuidListOtherGroup = modificationListOtherGroup.stream().map(ModificationInfos::getUuid).collect(Collectors.toList());
 
         // Duplicate the same modifications, and append them at the end of this new group modification list.
-        duplicateModificationUuidList = new ArrayList<>(modificationList.subList(0, 2));
+        duplicateModificationUuidList = new ArrayList<>(modificationUuidList.subList(0, 2));
         webTestClient.put().uri("/v1/groups/" + otherGroupId
                         + "?action=DUPLICATE")
                 .body(BodyInserters.fromValue(duplicateModificationUuidList))
@@ -1971,15 +1975,16 @@ public class ModificationControllerTest {
                 .expectBodyList(UUID.class)
                 .isEqualTo(List.of()); // no bad id => no error this time
 
-        var newModificationListOtherGroup = networkModificationService.getModifications(otherGroupId, true, true).map(ModificationInfos::getUuid).collectList().block();
+        var newModificationListOtherGroup = modificationRepository.getModifications(otherGroupId, true, true);
+        List<UUID> newModificationUuidListOtherGroup = newModificationListOtherGroup.stream().map(ModificationInfos::getUuid).collect(Collectors.toList());
         // now 3 modifications in new group: first 0 is still the same, last 1-2 are new (duplicates of 0-1 from first group)
         assertEquals(3, newModificationListOtherGroup.size());
-        assertEquals(modificationListOtherGroup, newModificationListOtherGroup.subList(0, 1));
+        assertEquals(modificationUuidListOtherGroup, newModificationUuidListOtherGroup.subList(0, 1));
         // compare duplicates
-        var newModification1 = networkModificationService.getModification(newModificationListOtherGroup.get(1)).blockFirst();
+        var newModification1 = newModificationListOtherGroup.get(1);
         newModification1.setUuid(null);
         assertEquals(modification0.toString(), newModification1.toString());
-        var newModification2 = networkModificationService.getModification(newModificationListOtherGroup.get(2)).blockFirst();
+        var newModification2 = newModificationListOtherGroup.get(2);
         newModification2.setUuid(null);
         assertEquals(modification1.toString(), newModification2.toString());
     }
@@ -1987,21 +1992,23 @@ public class ModificationControllerTest {
     @Test
     public void testMoveModification() {
         // create 2 modifications
-        List<UUID> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 2);
+        List<UUID> modificationUuidList = createSomeSwitchModifications(TEST_GROUP_ID, 2).
+                stream().map(ModificationInfos::getUuid).collect(Collectors.toList());
 
         // swap modifications: move [1] before [0]
-        List<UUID> movingModificationUuidList = Collections.singletonList(modificationList.get(1));
+        List<UUID> movingModificationUuidList = Collections.singletonList(modificationUuidList.get(1));
         webTestClient.put().uri("/v1/groups/" + TEST_GROUP_ID
-                    + "?action=MOVE&before=" + modificationList.get(0))
+                    + "?action=MOVE&before=" + modificationUuidList.get(0))
                 .body(BodyInserters.fromValue(movingModificationUuidList))
                 .exchange()
             .expectStatus().isOk();
 
-        var newModificationList = networkModificationService.getModifications(TEST_GROUP_ID, true, true).map(ModificationInfos::getUuid).collectList().block();
-        assertNotNull(newModificationList);
-        Collections.reverse(newModificationList);
+        var newModificationUuidList = modificationRepository.getModifications(TEST_GROUP_ID, true, true).
+                stream().map(ModificationInfos::getUuid).collect(Collectors.toList());
+        assertNotNull(newModificationUuidList);
+        Collections.reverse(newModificationUuidList);
 
-        assertEquals(modificationList, newModificationList);
+        assertEquals(modificationUuidList, newModificationUuidList);
     }
 
     @Test
